# armadillo

./: .syntastic_c_config  CMakeLists.txt  README.md
kernel/: CMakeLists.txt  init.c  main.c  system.s
kernel/boot/: boot.s
kernel/include/: print.h  print_serial.h  serial.h  vm.h
kernel/io/: print.c  print_serial.c  serial.c
script/: link.ld  load_env.sh  run_qemu.sh
